app-ols-integration/main/default/objects/OLS_Welcome_Email_Setting__mdt/OLS_Welcome_Email_Setting__mdt.object-meta.xml
<CustomObject>
    <description>These settings will help determine, based on state, which what assets (e.g. template, from address, etc.) to use within welcome emails.</description>
    <label>OLS Welcome Email Setting</label>
    <pluralLabel>OLS Welcome Email Setting</pluralLabel>
</CustomObject>