app-ols-integration/main/default/objects/OLS_Welcome_Email_Setting__mdt/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>The developer name of the email template for which ever state the OLS customer resides in.</description>
    <inlineHelpText>The developer name of the email template for which ever state the OLS customer resides in.</inlineHelpText>
    <label>Email Template Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>