app-ols-integration/main/default/objects/OLS_Welcome_Email_Setting__mdt/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <description>Address used as from address in welcome email. MUST match a verified Organization Wide Address.</description>
    <inlineHelpText>Address used as from address in welcome email. MUST match a verified Organization Wide Address.</inlineHelpText>
    <label>From Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>