app-ols-integration/main/default/objects/OLS_Welcome_Email_Setting__mdt/fields/Multiple_Products_Sold__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Products_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked if the state sells multiple products (e.g. Dental and Vision) in order to make possible things like using different email templates for different products purchased.</description>
    <inlineHelpText>This is checked if the state sells multiple products (e.g. Dental and Vision) in order to make possible things like using different email templates for different products purchased.</inlineHelpText>
    <label>Multiple Products Sold</label>
    <type>Checkbox</type>
</CustomField>