app-ols-integration/main/default/objects/OLS_Welcome_Email_Setting__mdt/fields/Supplied_State_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Supplied_State_Acronym__c</fullName>
    <description>This is the &apos;state acronym&apos; that is supplied from the OLS WebApp. It&apos;s values don&apos;t necessarily match that of an exact state acronym but the values supplied are SOLELY responsible for determine what welcome email template is used.</description>
    <inlineHelpText>This is the &apos;state acronym&apos; that is supplied from the OLS WebApp. It&apos;s values don&apos;t necessarily match that of an exact state acronym but the values supplied are SOLELY responsible for determine what welcome email template is used.</inlineHelpText>
    <label>Supplied State Acronym</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>